--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -17,10 +17,16 @@ profiles/red.png: profiles/red-c0e09a073521ac913620d211a372f56d.png
 profiles/red/index.png: profiles/red-c0e09a073521ac913620d211a372f56d.png
 profiles/yellow.png: profiles/yellow-c609a931d587de171272a386ca8b2074.png
 profiles/yellow/index.png: profiles/yellow-c609a931d587de171272a386ca8b2074.png
-application.js: application-4089923fb923e80427f883518854c929.js
-application/index.js: application-4089923fb923e80427f883518854c929.js
-application.css: application-d155323b9325d3a8b6b701ee9f734d96.css
-application/index.css: application-d155323b9325d3a8b6b701ee9f734d96.css
+application.js: application-a35b52b47124f7d08c8428a522413060.js
+application/index.js: application-a35b52b47124f7d08c8428a522413060.js
+application.css: application-aa3881a58575cb60dca776e4f3e7e84a.css
+application/index.css: application-aa3881a58575cb60dca776e4f3e7e84a.css
+bootstrap-wysihtml5.js: bootstrap-wysihtml5-2402b7cde99f9c4bf71c82060df40d95.js
+bootstrap-wysihtml5/index.js: bootstrap-wysihtml5-2402b7cde99f9c4bf71c82060df40d95.js
+bootstrap-wysihtml5.css: bootstrap-wysihtml5-757ecf6fbb670d36519a49c514ec3ea5.css
+bootstrap-wysihtml5/index.css: bootstrap-wysihtml5-757ecf6fbb670d36519a49c514ec3ea5.css
+bootstrap-wysihtml5/wysiwyg-color.css: bootstrap-wysihtml5/wysiwyg-color-302f69eedfbd67c993f8ce2bc64c971c.css
+bootstrap-wysihtml5/wysiwyg-color/index.css: bootstrap-wysihtml5/wysiwyg-color-302f69eedfbd67c993f8ce2bc64c971c.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
