updated layouts views

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -17,20 +17,24 @@ profiles/red.png: profiles/red-c0e09a073521ac913620d211a372f56d.png
 profiles/red/index.png: profiles/red-c0e09a073521ac913620d211a372f56d.png
 profiles/yellow.png: profiles/yellow-c609a931d587de171272a386ca8b2074.png
 profiles/yellow/index.png: profiles/yellow-c609a931d587de171272a386ca8b2074.png
-application.js: application-a35b52b47124f7d08c8428a522413060.js
-application/index.js: application-a35b52b47124f7d08c8428a522413060.js
-application.css: application-9a7dc27ffb1529daea1852806959d790.css
-application/index.css: application-9a7dc27ffb1529daea1852806959d790.css
+application.js: application-a69e98a5b6d8de8c73c00cf50822ad3c.js
+application/index.js: application-a69e98a5b6d8de8c73c00cf50822ad3c.js
+application.css: application-d3a1cabdfd1a4131c4dfdf2d99f973df.css
+application/index.css: application-d3a1cabdfd1a4131c4dfdf2d99f973df.css
 bootstrap-wysihtml5.js: bootstrap-wysihtml5-2402b7cde99f9c4bf71c82060df40d95.js
 bootstrap-wysihtml5/index.js: bootstrap-wysihtml5-2402b7cde99f9c4bf71c82060df40d95.js
 bootstrap-wysihtml5.css: bootstrap-wysihtml5-757ecf6fbb670d36519a49c514ec3ea5.css
 bootstrap-wysihtml5/index.css: bootstrap-wysihtml5-757ecf6fbb670d36519a49c514ec3ea5.css
 bootstrap-wysihtml5/wysiwyg-color.css: bootstrap-wysihtml5/wysiwyg-color-302f69eedfbd67c993f8ce2bc64c971c.css
 bootstrap-wysihtml5/wysiwyg-color/index.css: bootstrap-wysihtml5/wysiwyg-color-302f69eedfbd67c993f8ce2bc64c971c.css
-glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+bootstrap/glyphicons-halflings-regular/index.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+bootstrap/glyphicons-halflings-regular.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+bootstrap/glyphicons-halflings-regular/index.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+bootstrap/glyphicons-halflings-regular.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+bootstrap/glyphicons-halflings-regular/index.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+bootstrap/glyphicons-halflings-regular.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
+bootstrap/glyphicons-halflings-regular/index.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
 FontAwesome.otf: FontAwesome-1b753859c011e89c9cc8e29a6ee33956.otf
 FontAwesome/index.otf: FontAwesome-1b753859c011e89c9cc8e29a6ee33956.otf
 fontawesome-webfont.eot: fontawesome-webfont-e742c0f297e307a74bdf4ca3c19073a2.eot
